# hildon-input-method-framework

./: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac  hildon-input-method-framework-3-3.0.pc.in  hildon-input-method-framework-4.0.pc.in
debian/: changelog  control  copyright  gbp.conf  hildon-input-method-framework-dev.install  hildon-input-method-framework.install.in  hildon-input-method-framework.postinst.in  hildon-input-method-framework.postrm.in  rules
docs/: Makefile.am
src/: Makefile.am  hildon-im-common.c  hildon-im-common.h  hildon-im-context.c  hildon-im-context.h  hildon-im-gtk-compat.h  hildon-im-gtk.c  hildon-im-gtk.h  hildon-im-module.c  hildon-im-protocol.c  hildon-im-protocol.h
src/gtk2/: Makefile.am
src/gtk3/: Makefile.am
